# OpenSimTelemetry

./: .dockerignore  .gitignore  CHANGELOG-API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.e2e.yml  justfile
.claude/: settings.local.json
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  release.yml
docs/: adapter-guide.md  iracing-telemetry-variables.md
fixtures/: .gitignore
ost-adapters/: Cargo.toml
ost-adapters/src/: demo.rs  ibt_parser.rs  iracing.rs  lib.rs
ost-adapters/tests/: demo_tests.rs
ost-core/: Cargo.toml
ost-core/src/: adapter.rs  lib.rs  model.rs  units.rs
ost-server/: Cargo.toml  build.rs
ost-server/benches/: frame_throughput.rs
ost-server/src/: api.rs  api_docs.html  history.rs  lib.rs  main.rs  manager.rs  persistence.rs  replay.rs  sessions.rs  sinks.rs  state.rs  ui.html  web_ui.rs
ost-server/src/ui/: app.js  computed-metrics.js  constants.js  index.html  styles.css  telemetry-store.js  widgets-base.js  widgets-custom.js  widgets-data.js  widgets-gauge.js  widgets-graph.js  widgets-map.js  widgets-replay.js  widgets-vehicle.js
ost-server/tests/: api_tests.rs
tests/e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: api.spec.ts  helpers.ts  replay.spec.ts  ui.spec.ts
