[workspace]
members = [
    "ost-core",
    "ost-adapters",
    "ost-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenSimTelemetry Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/opensimtelemetry"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Windows APIs (for shared memory adapters)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
