[package]
name = "ost-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenSimTelemetry server with web UI and API"

[dependencies]
ost-core = { path = "../ost-core" }
ost-adapters = { path = "../ost-adapters" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# For SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# For HTTP sink
reqwest = "0.12"
